--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -53,7 +53,7 @@
 html {
     font-size: 62.5%;
     font-family: 'Manrope', sans-serif;
-    color: var(--black);
+    color: var(--white);
 }
 
 body {
@@ -107,4 +107,20 @@ body {
     width: 100%;
     padding: 2rem;
     background-color: var(--gray);
+}
+
+.change-location {
+    width: 100%;
+    padding: 1.2rem;
+    background-color: var(--black);
+    color: var(--white);
+    border: none;
+    font-size: 1.6rem;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.change-location:hover {
+    background-color: var(--white);
+    color: var(--black);
 }
