--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -66,8 +66,9 @@ body {
 }
 
 .app {
-    width: clamp(300px, 100%, 1920px);
+    width: clamp(300px, 100%, 1440px);
     min-height: 80svh;
+    max-height: 1023px;
 
     border: 4px var(--gray) solid;
 
@@ -78,6 +79,13 @@ body {
 
 .highlights {
     padding: 2rem;
+    width: 100%;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+.highlights-header {
+    padding: 2rem 0;
 }
 
 .header__weather-title {
@@ -118,9 +126,17 @@ body {
     font-size: 1.6rem;
     cursor: pointer;
     font-weight: bold;
+    margin-block-start: 2rem;
 }
 
 .change-location:hover {
     background-color: var(--white);
     color: var(--black);
+}
+
+.day-location-layout {
+    padding: 6rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
