--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -188,4 +188,14 @@ a {
     display: flex;
     gap: 1rem;
     overflow-x: hidden;
+    scroll-behavior: smooth;
+}
+
+.carousel>li {
+    width: calc(100% / 6);
+}
+
+.carousel.dragging>li {
+    cursor: grab;
+    user-select: none;
 }
